feat: updated home message

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,6 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 ---
 
 <BaseLayout>
-	<h1>404</h1>
-  	<p>Page not found</p>
+	<h1>Work in progress</h1>
+	<p>Page not ready yet</p>
 </BaseLayout>
