wip: improving website

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,13 @@
 ---
 ---
-<footer class="p-6 text-center text-sm text-white">
-    <p>
-        Copyright © {new Date().getFullYear()}. All rights reserved. Made by
+<footer>
+    <div>
+    <small>
+        Copyright &copy; {new Date().getFullYear().toString()}. Made by
         <a href="https://github.com/loioladev" target="_blank" rel="noopener">
-            <span class="text-orange"> Matheus Loiola.</span>
+            <span class=>Matheus Loiola</span>
         </a>
-    </p>
-</footer>
+    </small>
+    </div>
+</footer> 
+
