--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '../layouts/MainLayout.astro';
 ---
 
-<BaseLayout>
+<BaseLayout title="Home">
 	<h1>Work in progress</h1>
 	<p>Page not ready yet</p>
 </BaseLayout>
