--- a/src/pages/cses/index.astro
+++ b/src/pages/cses/index.astro
@@ -1,17 +1,22 @@
 ---
 import MainLayout from "../../layouts/MainLayout.astro";
-
-
+import ProblemCard from "../../components/ProblemCard.astro";
+const allProblems = await Astro.glob("./problems/*.md");
 ---
 
 <MainLayout title="CSES">
-    <header>
-        <div class="container">
-        </div>
-    </header>
-    <div class="post-contest">
-        <div class="content">
-            oi
-        </div>
-    </div>
+  <section class="container" aria-label="New Blog Posts">
+    <h1 class="h1">Problems from CSES</h1>
+      <div class="card-container">
+          {
+            allProblems.map((problem) => (
+              <ProblemCard
+                tagType="h2"
+                frontmatter={problem.frontmatter}
+                url={problem.url}
+              />
+            ))
+          }
+      </div>
+  </section>
 </MainLayout>
