--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,15 +6,15 @@ import navData from "../data/navData";
 
 <nav aria-label="Primary">
   <div class="navbar">
-    <a href="/" class="logomark">
-      <Icon name="logomark" width="40" />
+    <a href="/" class="logomark" aria-label="Go home">
+      <Icon name="logomark" width="60" />
     </a>
     <ul>
       {
         navData.map((item) => (
           <Link
-            href={item.path}
             text={item.name}
+            href={item.path}
             style="primary"
             isFilled={false}
           />
