--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,17 +4,25 @@ import Link from "../components/Link.astro";
 ---
 
 <MainLayout title="Erro 404">
-    <div class="container" style={{
-        display: "grid",
-        placeItems: "center",
-        textAlign: "center",
-        gap: "var(--space-sm)",
-    }}>
-    <h1>Error 404</h1>
+  <div
+    class="container"
+    style={{
+      display: "grid",
+      placeItems: "center",
+      textAlign: "center",
+      gap: "var(--space-sm)",
+    }}
+  >
+    <h1 class="h1">Nothing here (●´⌓`●)</h1>
     <p>Welp, this place is empty for now, or maybe forever...</p>
-    <Link href="/" text="Go back home" style="primary" icon={{
+    <Link
+      href="/"
+      text="Go back home"
+      style="primary"
+      icon={{
         name: "tabler:home",
-        side: "left"
-    }}/>
-    </div>
+        side: "left",
+      }}
+    />
+  </div>
 </MainLayout>
