--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,9 +1,18 @@
 ---
-import MainLayout from "../../layouts/MainLayout.astro";
-
-
+import MainLayout from '../../layouts/MainLayout.astro';
 ---
 
-<MainLayout title="My Blog">
-    <h1>Olá!</h1>
+<MainLayout>
+	<div
+    class="container"
+    style={{
+      display: "grid",
+      placeItems: "center",
+      textAlign: "center",
+      gap: "var(--space-sm)",
+    }}
+  >
+  <h1 class="h1">Work in progress</h1>
+  <p>Nothing to see here yet!</p>
+  </div>
 </MainLayout>
