--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
-import { Icon } from "astro-icon";
+import Icon from "../components/Icon.astro";
 ---
 
 <MainLayout title="Home">
