--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from "astro-icon";
+import Icon from "./Icon.astro";
 import Link from "./Link.astro";
 import navData from "../data/navData";
 ---
